--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "request": "^2.74.0",
     "request-promise": "^4.1.0",
     "require-json5": "^1.0.2",
-    "sequelize": "^3.23.6"
+    "sequelize": "^3.23.6",
+    "sphinxapi": "^1.2.1"
   },
   "devDependencies": {
     "babel-core": "^6.11.4",
