--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.14.0",
     "express-form-data": "0.0.2",
     "express-session": "^1.14.0",
+    "lodash": "^4.16.2",
     "log4js": "^0.6.38",
     "mysql": "^2.11.1",
     "request": "^2.74.0",
@@ -28,7 +29,8 @@
     "require-json5": "^1.0.2",
     "sequelize": "^3.23.6",
     "sphinx-promise": "^1.0.4",
-    "sphinxapi": "^1.2.1"
+    "sphinxapi": "^1.2.1",
+    "type-check": "latest"
   },
   "devDependencies": {
     "babel-core": "^6.11.4",
