--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,6 @@
   "presets": [ "es2015", "stage-0" ],
   "plugins": [
     ["babel-project-relative-import", { "sourceDir": "src/" }]
-  ]
+  ],
+  "sourceMaps": true
 }
