--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "deap": "^1.0.0",
     "express": "^4.14.0",
     "express-form-data": "0.0.2",
+    "express-light-limiter": "^1.0.1",
     "express-session": "^1.14.0",
     "lodash": "^4.16.2",
     "log4js": "^0.6.38",
